@@ -35,7 +35,7 @@
 #
 # RedHat 7.1   - LILO version 21.4-4
 # Mandrake 7.1 - LILO version 21.4-3
-#
+# Turbolinux 7.0 - LILO version 21.7.4-4
 #
 #
 #
@@ -56,7 +56,7 @@ $name = "boot";
 $version = "0.1.0";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
               "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", 
-	      "suse-7.0");
+	      "suse-7.0", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
        Configures Boot manager (Only LILO at the moment).
