@@ -525,7 +525,9 @@ sub xst_boot_conf_set
    "debian-2.2"   => "redhat-6.2",
    "debian-woody" => "redhat-6.2",
 
-   "suse-7.0"     => "redhat-6.2"
+   "suse-7.0"     => "redhat-6.2",
+
+   "turbolinux-7.0" => "redhat-6.2"
   );
   
   my %dist_tables =
@@ -574,7 +576,9 @@ sub xst_boot_conf_get
    "debian-2.2"   => "redhat-6.2",
    "debian-woody" => "redhat-6.2",
 
-   "suse-7.0"     => "redhat-6.2"
+   "suse-7.0"     => "redhat-6.2",
+
+   "turbolinux-7.0" => "redhat-6.2"
    );
   
   my %dist_tables =
