@@ -47,7 +47,7 @@ $name = "disks";
 $version = "0.1.0";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
               "redhat-7.1",  "mandrake-7.2", "debian-2.2", "debian-woody", 
-	      "suse-7.0");
+	      "suse-7.0", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
        Configures locally mounted partitioned media.
