@@ -40,7 +40,7 @@ require "___scriptsdir___/replace.pl";
 $name = "internetsharing";
 $version = "0.1.0";
 @platforms = ("redhat-7.0", "redhat-7.1",
-              "mandrake-7.2");
+              "mandrake-7.2", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
        Configures your system clock, timezone and time server list.
@@ -238,6 +238,7 @@ sub conf_get_parse_table
    "redhat-7.0"   => "redhat-7.0",
    "redhat-7.1"   => "redhat-7.0",
    "mandrake-7.2" => "redhat-7.0",
+   "turbolinux-7.0" => "redhat-7.0",
    );
 
   my %dist_tables =
@@ -270,6 +271,7 @@ sub conf_get_replace_table
    "redhat-7.0"   => "redhat-7.0",
    "redhat-7.1"   => "redhat-7.0",
    "mandrake-7.2" => "redhat-7.0",
+   "turbolinux-7.0"   => "redhat-7.0",
    );
 
   my %dist_tables =
