@@ -51,7 +51,7 @@ require "___scriptsdir___/replace.pl";
 $name = "time";
 $version = "0.1.0";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
-              "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0");
+              "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
        Configures your system clock, timezone and time server list.
@@ -379,7 +379,9 @@ sub conf_get_parse_table
    "debian-2.2"   => "debian-2.2",
    "debian-woody" => "debian-2.2",
 
-   "suse-7.0"     => "suse-7.0"
+   "suse-7.0"     => "suse-7.0",
+
+   "turbolinux-7.0" => "redhat-7.0"
    );
 
   my %dist_tables =
@@ -480,7 +482,9 @@ sub conf_get_replace_table
    "debian-2.2"   => "debian-2.2",
    "debian-woody" => "debian-2.2",
 
-   "suse-7.0"     => "suse-7.0"
+   "suse-7.0"     => "suse-7.0",
+
+   "turbolinux-7.0"   => "redhat-7.0"
    );
 
   my %dist_tables =
